--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
+import React, { useState, useEffect } from 'react';
+import connect from '@vkontakte/vk-connect';
+import View from '@vkontakte/vkui/dist/components/View/View';
+import ScreenSpinner from '@vkontakte/vkui/dist/components/ScreenSpinner/ScreenSpinner';
+import '@vkontakte/vkui/dist/vkui.css';
 
-<html lang="en">
-	<head>
-			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover">
-			<meta name="theme-color" content="#000000">
-			<meta content="IE=Edge" http-equiv="X-UA-Compatible">
-			<title>VK Mini App Boilerplate</title>
-	</head>
-	<body>
-		<style>
-		body{
-			background-color:#ffaa2f;
+import Home from './panels/Home';
+import Persik from './panels/Persik';
+
+const App = () => {
+	const [activePanel, setActivePanel] = useState('home');
+	const [fetchedUser, setUser] = useState(null);
+	const [popout, setPopout] = useState(<ScreenSpinner size='large' />);
+
+	useEffect(() => {
+		connect.subscribe(({ detail: { type, data }}) => {
+			if (type === 'VKWebAppUpdateConfig') {
+				const schemeAttribute = document.createAttribute('scheme');
+				schemeAttribute.value = data.scheme ? data.scheme : 'client_light';
+				document.body.attributes.setNamedItem(schemeAttribute);
 			}
-		</style>
-			<h1>it is work!👹👹👹</h1>
-	</body>
-</html>
+		});
+		async function fetchData() {
+			const user = await connect.send('VKWebAppGetUserInfo');
+			setUser(user);
+			setPopout(null);
+		}
+		fetchData();
+	}, []);
 
+	const go = e => {
+		setActivePanel(e.currentTarget.dataset.to);
+	};
+
+	return (
+		<View activePanel={activePanel} popout={popout}>
+			<Home id='home' fetchedUser={fetchedUser} go={go} />
+			<Persik id='persik' go={go} />
+		</View>
+	);
+}
+
+export default App;
 
 
 
