--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
 <html>
-<h2>yesssss</h2>
+<head>
+	<title></title>
+</head>
+<body>
+<style type="text/css">
+	body{
+		background-color: #584948;
+	}
+	.content{
+		width: 80%;
+		height: 90%;
+		position: absolute;
+		top: 150px;
+		left: 50%;
+		margin-left: -40%;
+	}
+
+	.test{
+		font-size: 80px;
+	}
+
+</style>
+<div class="content">
+	<a href="index2.html" class="test">test</a>
+	
+</div>
+</body>
 </html>
