--- a/index.html
+++ b/index.html
@@ -7,13 +7,30 @@
 	body{
 		background-color: #584948;
 	}
+    .label{
+    	width: 100%;
+    	height: 6%;
+    	position: absolute;
+    	top: 0px;
+    	left: 0px;
+    	background-color: #fff;
+    }
+
+    .main-logo{
+    	position: absolute;
+    	top: 0px;
+    	left: 0px;
+    	height: 100%;
+    }
+
 	.content{
-		width: 80%;
+		width: 85%;
 		height: 90%;
 		position: absolute;
-		top: 150px;
+		top: 8%;
 		left: 50%;
-		margin-left: -40%;
+		margin-left: -42.5%;
+		background-color: #fff;
 	}
 
 	.test{
@@ -21,6 +38,11 @@
 	}
 
 </style>
+<div class="label"> 
+<img src="Atmos-logo-1.png" class="main-logo">
+</div>
+
+
 <div class="content">
 	<a href="index2.html" class="test">test</a>
 	
