--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 	<title></title>
@@ -23,6 +24,13 @@
     	height: 100%;
     }
 
+    .main-baner{
+      position: absolute;
+      top: 3%;
+      left: 16%;
+      font-size: 102px;
+    }
+
 	.content{
 		width: 85%;
 		height: 90%;
@@ -40,6 +48,7 @@
 </style>
 <div class="label"> 
 <img src="Atmos-logo-1.png" class="main-logo">
+<a class="main-baner">Atmos</a>
 </div>
 
 
