--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 
 <div class="content">
 	<a href="index2.html" class="test">test</a>
+	<h1>efw</h1>
+	<h2>efw</h2>
+	<h3>efw</h3>
+	<h4>efw</h4>
+	<h5>efw</h5>
 	
 </div>
 </body>
