--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
 <head>
 	<title></title>
@@ -33,16 +33,31 @@
 
 	.content{
 		width: 85%;
-		height: 120%;
+		height: 100%;
 		position: absolute;
 		top: 8%;
 		left: 50%;
 		margin-left: -42.5%;
-		background-color: #fff;
+		
 	}
 
 	.test{
 		font-size: 80px;
+	}
+	.container{
+		background-color: #000;
+		width: 100%;
+		height: 37%;
+		top: 0%;
+		left: 0%;
+		border-radius: 15%;
+
+	}
+	.con2{
+		margin-top: 25%;
+	}
+	.con3{
+		margin-top: 25%;
 	}
 
 </style>
@@ -53,12 +68,9 @@
 
 
 <div class="content">
-	<a href="index2.html" class="test">test</a>
-	<h1>efw</h1>
-	<h2>efw</h2>
-	<h3>efw</h3>
-	<h4>efw</h4>
-	<h5>efw</h5>
+	<div class="container con1"></div>
+	<div class="container con2"></div>
+	<div class="container con3"></div>
 	
 </div>
 </body>
