--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		width: 85%;
 		height: 100%;
 		position: absolute;
-		top: 9%;
+		top: 8%;
 		left: 50%;
 		margin-left: -42.5%;
 		
@@ -68,9 +68,9 @@
 
 
 <div class="content">
-	<div class="container con1"></div>
-	<div class="container con2"></div>
-	<div class="container con3"></div>
+	<img src="Atmos-logo-1.png" class="container con1"></img>
+	<img src="Atmos-logo-1.png" class="container con2"></img>
+	<img src="Atmos-logo-1.png" class="container con3"></img>
 	
 </div>
 </body>
