--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
 		font-size: 80px;
 	}
 	.container{
-		background-color: #000;
+		background-color: #fff;
 		width: 100%;
-		height: 37%;
 		top: 0%;
 		left: 0%;
 		border-radius: 15%;
